@@ -1,7 +1,7 @@
 bin_PROGRAMS = wdfs
 wdfs_SOURCES = cache.c  cache.h  svn.c  svn.h  wdfs-main.c  wdfs-main.h  webdav.c  webdav.h
 
-# this flag is set via "#define FUSE_USE_VERSION XY" in wdfs-main.c
+# this flag is set via autoconf
 # wdfs_CPPFLAGS = -DFUSE_USE_VERSION=
 
 # eof
