@@ -1,3 +1,6 @@
+2020-03-03  barsnick
+	support both fuse2 and fuse3
+
 2007-04-17  noedler
 
 	wdfs, 1.4.2
